[gd_scene load_steps=3 format=3 uid="uid://dpyj0wgv1dvlf"]

[ext_resource type="Script" path="res://scripts/Main.gd" id="1_k8c7l"]
[ext_resource type="PackedScene" uid="uid://chqxj6nrmdvb5" path="res://scenes/GameBoard.tscn" id="2_m3o4n"]

[node name="Main" type="Node2D"]
script = ExtResource("1_k8c7l")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(640, 360)

[node name="GameBoard" parent="." instance=ExtResource("2_m3o4n")]

[node name="UI" type="CanvasLayer" parent="."]

[node name="HUD" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="WorkerInfo" type="VBoxContainer" parent="UI/HUD"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -170.0
offset_top = -60.0
offset_right = -10.0
offset_bottom = 60.0
grow_horizontal = 0
grow_vertical = 2

[node name="WorkerLabel" type="Label" parent="UI/HUD/WorkerInfo"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Worker 1"

[node name="APLabel" type="Label" parent="UI/HUD/WorkerInfo"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Action Points: 2/2"

[node name="StoneLabel" type="Label" parent="UI/HUD/WorkerInfo"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Stones: 0"

[node name="PlaceStoneButton" type="Button" parent="UI/HUD/WorkerInfo"]
layout_mode = 2
text = "Place Stone Here"

[node name="TurnInfo" type="VBoxContainer" parent="UI/HUD"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -170.0
offset_top = -80.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 0
grow_vertical = 0

[node name="TurnLabel" type="Label" parent="UI/HUD/TurnInfo"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Turn: 1"

[node name="EndTurnButton" type="Button" parent="UI/HUD/TurnInfo"]
layout_mode = 2
text = "End Turn (Space)"
